<resources>
    <string name="app_name">Places Anniversarie</string>
    <string name="place_name">Place Name:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="pick_image">Pick Image</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="google_maps_key">AIzaSyAaGbCm3_eL2UFKHUJD5il_zftCoZ0wsEo</string>
    <string name="pick_from_map">Pick From Map</string>
    <string name="there_is_no_data">There is no Data</string>
    <string name="message">Message</string>
    <string name="delete_confirmation_message">Are you sure that you want to delete this place?</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="update">Update</string>
</resources>
